Remove border around main table to avoid overlap issue [stage-2]
- Remove main table border completely and ensure a cell right border of last column is always transparent
- Integration tests added

--- a/src/widget/css/fixed-data-table-overrides.css
+++ b/src/widget/css/fixed-data-table-overrides.css
@@ -23,8 +23,12 @@
   border-color: transparent;
 }
 
+.fixedDataTableCellGroupLayout_cellGroup .fixedDataTableCellLayout_main:last-of-type {
+  border-right-color: transparent !important;
+}
+
 .fixedDataTableLayout_main {
-  border-color: transparent;
+  border: none;
 }
 
 .public_fixedDataTable_header,
